# openwhisper

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: download-models.sh  gen-tray-icons.py  gen_app_icon.py  gen_tray_icon.py  release.mjs
src/: About.tsx  App.tsx  Help.tsx  Settings.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: inject_test.rs  mic_test.rs  pipeline_test.rs  refine_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  injector.rs  lib.rs  llm_engine.rs  main.rs  models.rs  whisper_engine.rs
website/: index.html  script.js  styles.css
